Fix alignment of buttons - CSS BS

--- a/public/css/skeleton.css
+++ b/public/css/skeleton.css
@@ -172,7 +172,7 @@ input[type="reset"],
 input[type="button"] {
   display: inline-block;
   height: 38px;
-  padding: 0 30px;
+  padding: 0 20px; /*Marina*/
   color: #555;
   text-align: center;
   font-size: 11px;
@@ -270,7 +270,7 @@ select:focus {
   outline: 0; }
 label,
 legend {
-  display: block;
+/*display: block;*/ /*Marina*/
   margin-bottom: .5rem;
   font-weight: 600; }
 fieldset {
